# LinuxCTemplate

./: CMakeLists.txt
scripts/: lcompile.sh  llaunch.sh
src/: main.c
